--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
+        rel="stylesheet">
     <title>Rado</title>
-    <link rel="stylesheet" href="Exercise.css">
-	<script src="jquery.js"></script>
+    <link rel="stylesheet" href="FirstWebsite.css">
+    <script src="jquery.js"></script>
 </head>
+
 <body>
-    
+    <div class="grid-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+    </div>
+
+
+
+
+
+
+    <script src="FirstWebsite.js" type="module"></script>
 </body>
+
 </html>
