--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -16,12 +16,13 @@
 
 <body>
     <div class="grid-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
+        <div class="small-6 columns">
+         <div clkass="examle-content"></div>
+        </div>
+        
+        <div class="small-1 columns">2</div>
+        <div class="small-4 columns">3</div>
+        <div class="small-6 columns">4</div>
     </div>
 
 
