--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -9,17 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="...css/fundatio.min.css”>
     <title>Rado</title>
-    <link rel="stylesheet" href="FirstWebsite.css">
+    <link rel=" stylesheet" href="FirstWebsite.css">
     <script src="jquery.js"></script>
 </head>
+
 
 <body>
     <div class="grid-container">
         <div class="small-6 columns">
-         <div clkass="examle-content"></div>
+            <div clkass="examle-content"></div>
         </div>
-        
+
         <div class="small-1 columns">2</div>
         <div class="small-4 columns">3</div>
         <div class="small-6 columns">4</div>
