--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -9,24 +9,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
         rel="stylesheet">
-
-    <link rel="stylesheet" href="...css/fundatio.min.css”>
+    <link rel="stylesheet" href="Exercise.css">
+    <link rel="stylesheet" href=...FirstWebsite\css\fundatio.min.css”>
+    
     <title>Rado</title>
-    <link rel=" stylesheet" href="FirstWebsite.css">
+
     <script src="jquery.js"></script>
 </head>
 
 
 <body>
-    <div class="grid-container">
-        <div class="small-6 columns">
-            <div clkass="examle-content"></div>
-        </div>
-
-        <div class="small-1 columns">2</div>
-        <div class="small-4 columns">3</div>
-        <div class="small-6 columns">4</div>
-    </div>
+    <div class="grid-x">
+        <div class="cell">full width cell</div>
+        <div class="cell">full width cell</div>
+      </div>
+      <div class="grid-x">
+        <div class="cell small-6">6 cells</div>
+        <div class="cell small-6">6 cells</div>
+      </div>
+      <div class="grid-x">
+        <div class="cell medium-6 large-4">12/6/4 cells</div>
+        <div class="cell medium-6 large-8">12/6/8 cells</div>
+      </div>
 
 
 
