--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="Exercise.css">
-    <link rel="stylesheet" href=...FirstWebsite\css\fundatio.min.css”>
+    <link rel="stylesheet" href="FirstWebsite.css">
+    <link rel="stylesheet" href="foundation.min.css">
     
     <title>Rado</title>
 
@@ -19,17 +19,10 @@
 
 
 <body>
-    <div class="grid-x">
-        <div class="cell">full width cell</div>
-        <div class="cell">full width cell</div>
-      </div>
-      <div class="grid-x">
-        <div class="cell small-6">6 cells</div>
-        <div class="cell small-6">6 cells</div>
-      </div>
-      <div class="grid-x">
-        <div class="cell medium-6 large-4">12/6/4 cells</div>
-        <div class="cell medium-6 large-8">12/6/8 cells</div>
+    <div class="grid-x grid-margin-x">
+        <div class="cell small-4">4 cells</div>
+        <div class="cell auto">Whatever's left!</div>
+        <div class="cell auto">Whatever's left!</div>
       </div>
 
 
