--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="FirstWebsite.css">
     <link rel="stylesheet" href="foundation.min.css">
-    
+
     <title>Rado</title>
 
     <script src="jquery.js"></script>
@@ -19,11 +19,19 @@
 
 
 <body>
-    <div class="grid-x grid-margin-x">
-        <div class="cell small-4">4 cells</div>
-        <div class="cell auto">Whatever's left!</div>
-        <div class="cell auto">Whatever's left!</div>
-      </div>
+    <div class="grid-x grid-margin-x" id="heading">
+        <div class="cell medium-3 ">Radzio.com</div>
+        <div class="cell medium-3 ">About</div>
+        <div class="cell medium-3 ">Portfolio</div>
+        <div class="cell medium-3 ">Contact</div>
+    </div>
+
+    <Div class="grid-y" style="height: 500px;">
+        <div class="cell small-6 medium-4 large-10" id="h1">
+            Radzio.com<br>
+            Robi super stronki
+          </div>
+    </Div>
 
 
 
