--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -63,7 +63,7 @@
        
         </div>
     <div class="cell medium-4" id="foto2">
-        <img id=src="images/plat.jpg" width="250" height="175"><br>
+        <img src="images/plat.jpg" width="500" height="330"><br>
      
     </div>
 </div>
