--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -66,12 +66,12 @@
         </div>
         <div class="cell medium-4 foto2">
             <img src="images/plat.jpg" width="500" height="330"><br>
-
-          
-        </div>  
-        <div clas="siabadaba">
+            <div class="siabadaba">
                 Siaba daba
             </div>
+
+        </div>
+
     </div>
 
 
