--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -66,7 +66,7 @@
         </div>
         <div class="cell medium-4 foto2">
             <img src="images/plat.jpg" width="500" height="330"><br>
-            <div class="siabadaba">
+            <div class="discription">
                 Siaba daba
             </div>
 
