--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -21,9 +21,10 @@
 <body>
     <div class="grid-x  grid-padding-x heading"">
         <div class=" cell medium-3 ">Radzio.com</div>
-        <div class=" cell medium-3 ">About</div>
-        <div class=" cell medium-3 ">Portfolio</div>
-        <div class=" cell medium-3 ">Contact</div>
+        <div class=" cell medium-5 "></div>
+        <div class=" cell medium-1 ">About</div>
+        <div class=" cell medium-1 ">Portfolio</div>
+        <div class=" cell medium-1 ">Contact</div>
     </div>
 
     <div class=" grid-padding-x" style="height: 300px;">
@@ -55,26 +56,43 @@
         </div>
     </div>
 
-    <!-- //////////////////////////////foto///////////////////////// -->
+    <!-- //////////////////////////////foto1///////////////////////// -->
     <div class="grid-x  foto">
         <div class="cell medium-4 foto1">
-            <!-- <img src="images/stat.jpg" width="150" height="75"><br> -->
+            <img src="images/22.jpg" width= 100% height=100%><br>
+            <div class="discription1">
+                takie takie
+            </div>
 
         </div>
         <div class="cell medium-2 ">
 
         </div>
         <div class="cell medium-4 foto2">
-            <img src="images/plat.jpg" width="500" height="330"><br>
-            <div class="discription">
+            <img src="images/55.jpg" width=100% height=100%><br>
+            <div class="discription2">
                 Siaba daba
             </div>
-
+        </div>
+    </div>
+<!-- ///////////////////////////////foto2//////////////////////////////////// -->
+<div class="grid-x  foto">
+    <div class="cell medium-4 foto1">
+        <img src="images/33.jpg" width="500" height="330"><br>
+        <div class="discription1">
+           yyyyyyyyyy
         </div>
 
     </div>
+    <div class="cell medium-2 ">
 
-
+    </div>
+    <div class="cell medium-4 foto2">
+        <img src="images/11.jpg" width="500" height="330"><br>
+        <div class="discription2">
+            xxxxxxxxxxx
+    </div>
+</div>
 
 
 
