--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -1,84 +1,102 @@
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
-rel="stylesheet">
-<link rel="stylesheet" href="FirstWebsite.css">
-<link rel="stylesheet" href="foundation.min.css">
+<!DOCTYPE html>
+<html lang="pl">
 
-<title>Rado</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="FirstWebsite.css">
+    <link rel="stylesheet" href="foundation.min.css">
 
-<script src="jquery.js"></script>
+    <title>Rado</title>
+
+    <script src="jquery.js"></script>
 </head>
 
 
 <body>
-<div class="grid-x  grid-padding-x heading"">
-<div class=" cell medium-3 ">Radzio.com</div>
-<div class=" cell medium-5 "></div>
-<div class=" cell medium-1 ">About</div>
-<div class=" cell medium-1 ">Portfolio</div>
-<div class=" cell medium-1 ">Contact</div>
-</div>
+    <div class="grid-x  grid-padding-x heading"">
+        <a href=" cell medium-3 ">Radzio.com</a>
+        <a href=" cell medium-5 "></a>
+        <a href=" cell medium-1 ">About</a>
+        <a href=" cell medium-1 ">Portfolio</a>
+        <a href=" cell medium-1 ">Contact</a>
+    </div>
 
-<div class=" grid-padding-x" style="height: 300px;">
-<div class="cell small-6 medium-4 large-10 h1">
-    Radzio.com<br>
-    Robi super stronki
-</div>
-</div>
-<div class=" grid-padding-x" style="height: 300px;">
-<div class="cell small-6 medium-4 large-10 h2">
-    Jak Dominiczek skoryguje<br>
-    to opadnie wam kopara
-</div>
-</div>
+    <div class=" grid-padding-x" style="height: 300px;">
+        <div class="cell small-6 medium-4 large-10 h1">
+            Radzio.com<br>
+            Robi super stronki
+        </div>
+    </div>
+    <div class=" grid-padding-x" style="height: 300px;">
+        <div class="cell small-6 medium-4 large-10 h2">
+            Jak Dominiczek skoryguje<br>
+            to opadnie wam kopara
+        </div>
+    </div>
 
 
-<div class="grid-x graphic">
-<div class="cell medium-4 ">
-    <img src="images/develop.png" width="50" height="33"><br>
-    developing
-</div>
-<div class="cell medium-4 ">
-    <img src="images/brand.png" width="50" height="33"><br>
-    branding
-</div>
-<div class="cell medium-4 ">
-    <img src="images/art.png" width="50" height="33"><br>
-    art
-</div>
-</div>
+    <div class="grid-x  graphic">
+        <div class="cell medium-4 ">
+            <img src="images/develop.png" width="50" height="33"><br>
+            developing
+        </div>
+        <div class="cell medium-4 ">
+            <img src="images/brand.png" width="50" height="33"><br>
+            branding
+        </div>
+        <div class="cell medium-4 ">
+            <img src="images/art.png" width="50" height="33"><br>
+            art
+        </div>
+    </div>
 
-<!-- //////////////////////////////foto1///////////////////////// -->
-<div class="grid-x foto">
-<div class="cell medium-6">
-    <img src="images/22.jpg" width=100% height=100%><br>
-    <div class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium beatae laborum nobis voluptatem repudiandae sit facilis, eligendi soluta quod optio, doloremque consectetur. Deleniti similique reprehenderit cum corrupti dolores nam a.
+    <!-- //////////////////////////////foto1///////////////////////// -->
+    <div class="grid-x  foto">
+        <div class="cell medium-4 foto1">
+            <img src="images/22.jpg" width= 100% height=100%><br>
+            <div class="discription1">
+                takie takie
+            </div>
+
+        </div>
+        <div class="cell medium-2 ">
+
+        </div>
+        <div class="cell medium-4 foto2">
+            <img src="images/55.jpg" width=100% height=100%><br>
+            <div class="discription2">
+                Siaba daba
+            </div>
+        </div>
+    </div>
+<!-- ///////////////////////////////foto2//////////////////////////////////// -->
+<div class="grid-x  foto">
+    <div class="cell medium-4 foto1">
+        <img src="images/33.jpg" width="500" height="330"><br>
+        <div class="discription1">
+           yyyyyyyyyy
+        </div>
+
+    </div>
+    <div class="cell medium-2 ">
+
+    </div>
+    <div class="cell medium-4 foto2">
+        <img src="images/11.jpg" width="500" height="330"><br>
+        <div class="discription2">
+            xxxxxxxxxxx
     </div>
 </div>
-<div class="cell medium-6">
-    <img src="images/55.jpg" width=100% height=100%><br>
-    <div class="description">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam eaque suscipit ex porro facere consectetur cum dolorum accusamus animi molestias velit praesentium obcaecati ipsum neque quam, aut, sapiente fugiat sequi?
-    </div>
-</div>
-<div class="cell medium-6">
-    <img src="images/33.jpg" width="500" height="330"><br>
-    <div class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eos totam voluptate modi eligendi soluta neque aliquid, illum impedit, ipsam sequi alias. Corrupti, mollitia! Accusamus sequi fugiat numquam quibusdam qui?
-    </div>
-</div>
-<div class="cell medium-6">
-    <img src="images/11.jpg" width="500" height="330"><br>
-    <div class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eum hic facilis assumenda autem, suscipit accusantium explicabo distinctio aut cum enim optio alias iure, possimus, veniam odio dicta? Sed, laboriosam.
-    </div>
-</div>
-</div>
 
 
 
-
-<script src="FirstWebsite.js" type="module"></script>
+    <script src="FirstWebsite.js" type="module"></script>
 
 </body>
 
