--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -20,11 +20,11 @@
 
 <body>
     <div class="grid-x  grid-padding-x heading"">
-        <a href=" cell medium-3 ">Radzio.com</a>
-        <a href=" cell medium-5 "></a>
-        <a href=" cell medium-1 ">About</a>
-        <a href=" cell medium-1 ">Portfolio</a>
-        <a href=" cell medium-1 ">Contact</a>
+        <a href="#cell medium-3 ">Radzio.com</a>
+        <a href="#cell medium-5 "></a>
+        <a class=„cell medium-3 about” href=„.h2”>About</a>
+        <a href="#cell medium-1 ">Portfolio</a>
+        <a href="#cell medium-1 ">Contact</a>
     </div>
 
     <div class=" grid-padding-x" style="height: 300px;">
@@ -33,8 +33,9 @@
             Robi super stronki
         </div>
     </div>
-    <div class=" grid-padding-x" style="height: 300px;">
-        <div class="cell small-6 medium-4 large-10 h2">
+
+    <div class=" grid-padding-x h2" style="height: 300px;">
+        <div class="cell small-6 medium-4 large-10 ">
             Jak Dominiczek skoryguje<br>
             to opadnie wam kopara
         </div>
