--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -22,8 +22,8 @@
     <div class="grid-x  grid-padding-x heading"">
         <a href="#cell medium-3 ">Radzio.com</a>
         <a href="#cell medium-5 "></a>
-        <a class=„cell medium-3 about” href=„.h2”>About</a>
-        <a href="#cell medium-1 ">Portfolio</a>
+        <a id="about" class=„cell medium-3” href=#h2>About</a>
+        <a id="foto" href=„cell medium-3” href=#foto></a>
         <a href="#cell medium-1 ">Contact</a>
     </div>
 
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class=" grid-padding-x h2" style="height: 300px;">
+    <div id="h2" class=" grid-padding-x h2" style="height: 300px;">
         <div class="cell small-6 medium-4 large-10 ">
             Jak Dominiczek skoryguje<br>
             to opadnie wam kopara
@@ -42,7 +42,7 @@
     </div>
 
 
-    <div class="grid-x  graphic">
+    <div id="graphic" class="grid-x  graphic">
         <div class="cell medium-4 ">
             <img src="images/develop.png" width="50" height="33"><br>
             developing
@@ -58,7 +58,7 @@
     </div>
 
     <!-- //////////////////////////////foto1///////////////////////// -->
-    <div class="grid-x  foto">
+    <div id="foto" class="grid-x  foto">
         <div class="cell medium-4 foto1">
             <img src="images/22.jpg" width= 100% height=100%><br>
             <div class="discription1">
