--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -20,11 +20,11 @@
 
 <body>
     <div class="grid-x  grid-padding-x heading"">
-        <a href="#cell medium-3 ">Radzio.com</a>
-        <a href="#cell medium-5 "></a>
-        <a id="about" class=„cell medium-3” href=#h2>About</a>
-        <a id="foto" href=„cell medium-3” href=#foto></a>
-        <a href="#cell medium-1 ">Contact</a>
+        <a class=" cell medium-2 ">Radzio.com</a>
+        <a class=" cell medium-5 "></a>
+        <a id=" about" class=„cell medium-3” href=#h2>About</a>
+        <a id="foto" class=„cell medium-3” href=#foto>Portfolio</a>
+        <a id="contact" class="cell medium-2" href=#con>Contact</a>
     </div>
 
     <div class=" grid-padding-x" style="height: 300px;">
@@ -60,7 +60,7 @@
     <!-- //////////////////////////////foto1///////////////////////// -->
     <div id="foto" class="grid-x  foto">
         <div class="cell medium-4 foto1">
-            <img src="images/22.jpg" width= 100% height=100%><br>
+            <img src="images/22.jpg" width=100% height=100%><br>
             <div class="discription1">
                 takie takie
             </div>
@@ -76,24 +76,46 @@
             </div>
         </div>
     </div>
-<!-- ///////////////////////////////foto2//////////////////////////////////// -->
-<div class="grid-x  foto">
-    <div class="cell medium-4 foto1">
-        <img src="images/33.jpg" width="500" height="330"><br>
-        <div class="discription1">
-           yyyyyyyyyy
+    <!-- ///////////////////////////////foto2//////////////////////////////// -->
+    <div class="grid-x  foto">
+        <div class="cell medium-4 foto1">
+            <img src="images/33.jpg" width="500" height="330"><br>
+            <div class="discription1">
+                yyyyyyyyyy
+            </div>
+
+        </div>
+        <div class="cell medium-2 ">
+
+        </div>
+        <div class="cell medium-4 foto2">
+            <img src="images/11.jpg" width="500" height="330"><br>
+            <div class="discription2">
+                xxxxxxxxxxx
+            </div>
+        </div>
+    </div>
+    <!-- /////////////////////////////////contact//////////////////// -->
+
+    <div id="con" class="grid-y">
+        <div id="interested" class=" grid-padding-x interested" style="height: 300px;">
+            <div class="cell small-6 something ">
+                Nowe mordeczki na kwadracie mile widziane
+            </div>
         </div>
 
-    </div>
-    <div class="cell medium-2 ">
 
+        <div id="email" class="grid-x  email">
+            <div class="cell medium-4 ">
+                <img src="images/email.png" width="50" height="33"><br>
+                email us
+            </div>
+            <div class="cell medium-4 ">
+                <img src="images/phone.png" width="50" height="33"><br>
+                phone us
+            </div>
+        </div>
     </div>
-    <div class="cell medium-4 foto2">
-        <img src="images/11.jpg" width="500" height="330"><br>
-        <div class="discription2">
-            xxxxxxxxxxx
-    </div>
-</div>
 
 
 
