--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -19,19 +19,25 @@
 
 
 <body>
-    <div class="grid-x  grid-padding-x heading"">
-        <a class=" cell medium-2 ">Radzio.com</a>
-        <a class=" cell medium-5 "></a>
-        <a id=" about" class=„cell medium-3” href=#h2>About</a>
-        <a id="foto" class=„cell medium-3” href=#foto>Portfolio</a>
-        <a id="contact" class="cell medium-2" href=#con>Contact</a>
+    <div class="grid-x  grid-padding-x heading">
+        <a class="cell medium-2 ">Radzio.com</a>
+        <a class="cell medium-5 "></a>
+        <a id="about" class=„cell medium-3” href="#h2">About</a>
+        <a id="ourwork" class=„cell medium-3” >Portfolio</a>
+        <a id="contact" class="cell medium-2" href="#con">Contact</a>
     </div>
 
     <div class=" grid-padding-x" style="height: 300px;">
+
+        <div class="cell small-6 medium-4 large-10 work">
+            na robocie
+        </div>
         <div class="cell small-6 medium-4 large-10 h1">
             Radzio.com<br>
             Robi super stronki
         </div>
+      
+
     </div>
 
     <div id="h2" class=" grid-padding-x h2" style="height: 300px;">
