--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -19,109 +19,122 @@
 
 
 <body>
-    <div class="grid-x  grid-padding-x heading">
-        <a class="cell medium-2 ">Radzio.com</a>
-        <a class="cell medium-5 "></a>
-        <a id="about" class=„cell medium-3” href="#h2">About</a>
-        <a id="ourwork" class=„cell medium-3” >Portfolio</a>
-        <a id="contact" class="cell medium-2" href="#con">Contact</a>
-    </div>
+	<header>
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x">
+				<a href="#about-me" class="cell large-auto">Radzio.com</a>
+				<a href="#graphics" class="cell large-auto">Graphics</a>
+				<a href="#about" class="cell large-auto">About</a>
+				<a href="#ourwork" class="cell large-auto">Portfolio</a>
+				<a href="#contact" class="cell large-auto">Contact</a>
+			</div>
+		</div>
+	</header>
 
-    <div class=" grid-padding-x" style="height: 300px;">
+	<section id="about-me">
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x" style="padding:2rem 0">
+				<div class="cell small-6 medium-4 large-10 work">
+					na robocie
+				</div>
+				<div class="cell small-6 medium-4 large-10">
+					<div class="h1">
+						Radzio.com<br>
+						Robi super stronki
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-        <div class="cell small-6 medium-4 large-10 work">
-            na robocie
-        </div>
-        <div class="cell small-6 medium-4 large-10 h1">
-            Radzio.com<br>
-            Robi super stronki
-        </div>
-      
-
-    </div>
-
-    <div id="h2" class=" grid-padding-x h2" style="height: 300px;">
-        <div class="cell small-6 medium-4 large-10 ">
-            Jak Dominiczek skoryguje<br>
-            to opadnie wam kopara
-        </div>
-    </div>
+	<section id="about">
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x" style="height: 300px;">
+				<div class="cell small-6 medium-4 large-10 ">
+					<div class="h2">
+						Jak Dominiczek skoryguje<br>
+						to opadnie wam kopara
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
-    <div id="graphic" class="grid-x  graphic">
-        <div class="cell medium-4 ">
-            <img src="images/develop.png" width="50" height="33"><br>
-            developing
-        </div>
-        <div class="cell medium-4 ">
-            <img src="images/brand.png" width="50" height="33"><br>
-            branding
-        </div>
-        <div class="cell medium-4 ">
-            <img src="images/art.png" width="50" height="33"><br>
-            art
-        </div>
-    </div>
+	<section id="graphics">
+		<div class="grid-container graphics">
+			<div class="grid-x align-middle text-center">
+				<div class="cell medium-4 ">
+					<img src="images/develop.png" width="50" height="33"><br>
+					developing
+				</div>
+				<div class="cell medium-4 ">
+					<img src="images/brand.png" width="50" height="33"><br>
+					branding
+				</div>
+				<div class="cell medium-4 ">
+					<img src="images/art.png" width="50" height="33"><br>
+					art
+				</div>
+			</div>
+		</div>
+	</section>
 
     <!-- //////////////////////////////foto1///////////////////////// -->
-    <div id="foto" class="grid-x  foto">
-        <div class="cell medium-4 foto1">
-            <img src="images/22.jpg" width=100% height=100%><br>
-            <div class="discription1">
-                takie takie
+    <div class="grid-x gallery">
+        <div class="cell medium-6">
+            <img src="images/22.jpg"><br>
+            <div class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam voluptatem ipsa ratione.
             </div>
-
         </div>
-        <div class="cell medium-2 ">
 
-        </div>
-        <div class="cell medium-4 foto2">
-            <img src="images/55.jpg" width=100% height=100%><br>
-            <div class="discription2">
+        <div class="cell medium-6">
+            <img src="images/55.jpg"><br>
+            <div class="description">
                 Siaba daba
             </div>
         </div>
-    </div>
-    <!-- ///////////////////////////////foto2//////////////////////////////// -->
-    <div class="grid-x  foto">
-        <div class="cell medium-4 foto1">
-            <img src="images/33.jpg" width="500" height="330"><br>
-            <div class="discription1">
+
+        <div class="cell medium-6">
+            <img src="images/33.jpg"><br>
+            <div class="description">
                 yyyyyyyyyy
             </div>
-
         </div>
-        <div class="cell medium-2 ">
 
-        </div>
-        <div class="cell medium-4 foto2">
-            <img src="images/11.jpg" width="500" height="330"><br>
-            <div class="discription2">
+        <div class="cell medium-6">
+            <img src="images/11.jpg"><br>
+            <div class="description">
                 xxxxxxxxxxx
             </div>
         </div>
     </div>
     <!-- /////////////////////////////////contact//////////////////// -->
 
-    <div id="con" class="grid-y">
-        <div id="interested" class=" grid-padding-x interested" style="height: 300px;">
-            <div class="cell small-6 something ">
-                Nowe mordeczki na kwadracie mile widziane
-            </div>
-        </div>
-
-
-        <div id="email" class="grid-x  email">
-            <div class="cell medium-4 ">
-                <img src="images/email.png" width="50" height="33"><br>
-                email us
-            </div>
-            <div class="cell medium-4 ">
-                <img src="images/phone.png" width="50" height="33"><br>
-                phone us
-            </div>
-        </div>
-    </div>
+    <section id="contact" class="interested">
+		<div class="grid-container">
+			<div class="grid-padding-x" style="height: 300px;">
+				<div class="cell small-6 something ">
+					Nowe mordeczki na kwadracie mile widziane
+				</div>
+			</div>
+		</div>
+		<div class="email">
+			<div class="grid-container">
+				<div class="grid-x align-center text-center">
+					<div class="cell medium-4 ">
+						<img src="images/email.png" width="50" height="33"><br>
+						email us
+					</div>
+					<div class="cell medium-4 ">
+						<img src="images/phone.png" width="50" height="33"><br>
+						phone us
+					</div>
+				</div>
+			</div>
+		</div>
+    </section>
 
 
 
