--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -2,19 +2,19 @@
 <html lang="pl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="FirstWebsite.css">
-    <link rel="stylesheet" href="foundation.min.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="FirstWebsite.css">
+	<link rel="stylesheet" href="foundation.min.css">
 
-    <title>Rado</title>
+	<title>Rado</title>
 
-    <script src="jquery.js"></script>
+	<script src="jquery.js"></script>
 </head>
 
 
@@ -23,7 +23,6 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<a href="#about-me" class="cell large-auto">Radzio.com</a>
-				<a href="#graphics" class="cell large-auto">Graphics</a>
 				<a href="#about" class="cell large-auto">About</a>
 				<a href="#ourwork" class="cell large-auto">Portfolio</a>
 				<a href="#contact" class="cell large-auto">Contact</a>
@@ -34,9 +33,7 @@
 	<section id="about-me">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x" style="padding:2rem 0">
-				<div class="cell small-6 medium-4 large-10 work">
-					na robocie
-				</div>
+				
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
 						Radzio.com<br>
@@ -52,16 +49,12 @@
 			<div class="grid-x grid-padding-x" style="height: 300px;">
 				<div class="cell small-6 medium-4 large-10 ">
 					<div class="h2">
-						Jak Dominiczek skoryguje<br>
-						to opadnie wam kopara
+						co robimy
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
 
-
-	<section id="graphics">
 		<div class="grid-container graphics">
 			<div class="grid-x align-middle text-center">
 				<div class="cell medium-4 ">
@@ -78,41 +71,55 @@
 				</div>
 			</div>
 		</div>
+
 	</section>
 
-    <!-- //////////////////////////////foto1///////////////////////// -->
-    <div class="grid-x gallery">
-        <div class="cell medium-6">
-            <img src="images/22.jpg"><br>
-            <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam voluptatem ipsa ratione.
-            </div>
-        </div>
 
-        <div class="cell medium-6">
-            <img src="images/55.jpg"><br>
-            <div class="description">
-                Siaba daba
-            </div>
-        </div>
 
-        <div class="cell medium-6">
-            <img src="images/33.jpg"><br>
-            <div class="description">
-                yyyyyyyyyy
-            </div>
-        </div>
 
-        <div class="cell medium-6">
-            <img src="images/11.jpg"><br>
-            <div class="description">
-                xxxxxxxxxxx
-            </div>
-        </div>
-    </div>
-    <!-- /////////////////////////////////contact//////////////////// -->
+	<!-- //////////////////////////////foto1///////////////////////// -->
+	<div id="na robocie"  class="grid-container">
+		<div class="grid-x grid-padding-x" style="padding:2rem 0">
+			<div class="cell small-6 medium-4 large-10 work">
+				na robocie
+			</div>
+		</div>
+	</div>
+	<div class="grid-x gallery">
+		
+		<div class="cell medium-6">
+			<img src="images/22.jpg"><br>
+			<div class="description">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
+				facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
+				voluptatem ipsa ratione.
+			</div>
+		</div>
 
-    <section id="contact" class="interested">
+		<div class="cell medium-6">
+			<img src="images/55.jpg"><br>
+			<div class="description">
+				Siaba daba
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/33.jpg"><br>
+			<div class="description">
+				yyyyyyyyyy
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/11.jpg"><br>
+			<div class="description">
+				xxxxxxxxxxx
+			</div>
+		</div>
+	</div>
+	<!-- /////////////////////////////////contact//////////////////// -->
+
+	<section id="contact" class="interested">
 		<div class="grid-container">
 			<div class="grid-padding-x" style="height: 300px;">
 				<div class="cell small-6 something ">
@@ -134,11 +141,11 @@
 				</div>
 			</div>
 		</div>
-    </section>
+	</section>
 
 
 
-    <script src="FirstWebsite.js" type="module"></script>
+	<script src="FirstWebsite.js" type="module"></script>
 
 </body>
 
