--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -45,7 +45,7 @@
 	</section>
 
 	<section id="about">
-		<div class="grid-container">
+		<div class="grid-container sentence">
 			<div class="grid-x grid-padding-x" style="height: 300px;">
 				<div class="cell small-6 medium-4 large-10 ">
 					<div class="h2">
@@ -71,56 +71,21 @@
 				</div>
 			</div>
 		</div>
-
 	</section>
-
-
-
-
-	<!-- //////////////////////////////foto1///////////////////////// -->
-	<div id="na robocie"  class="grid-container">
-		<div class="grid-x grid-padding-x" style="padding:2rem 0">
-			<div class="cell small-6 medium-4 large-10 work">
-				na robocie
-			</div>
-		</div>
-	</div>
-	<div class="grid-x gallery">
-		
-		<div class="cell medium-6">
-			<img src="images/22.jpg"><br>
-			<div class="description">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
-				facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
-				voluptatem ipsa ratione.
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/55.jpg"><br>
-			<div class="description">
-				Siaba daba
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/33.jpg"><br>
-			<div class="description">
-				yyyyyyyyyy
-			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/11.jpg"><br>
-			<div class="description">
-				xxxxxxxxxxx
-			</div>
-		</div>
-	</div>
-	<!-- /////////////////////////////////contact//////////////////// -->
-
+	
 	<section id="contact" class="interested">
 		<div class="grid-container">
+			<div class="grid-x grid-padding-x" style="padding:2rem 0">
+				
+				<div class="cell small-6 medium-4 large-10">
+					<div class="h1">
+						Radzio.com<br>
+						bądźmy w kontakcie
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="grid-container touch">
 			<div class="grid-padding-x" style="height: 300px;">
 				<div class="cell small-6 something ">
 					Nowe mordeczki na kwadracie mile widziane
@@ -142,6 +107,52 @@
 			</div>
 		</div>
 	</section>
+
+
+
+
+	<!-- //////////////////////////////foto1///////////////////////// -->
+	<div id="na robocie"  class="grid-container">
+		<div class="grid-x grid-padding-x" style="padding:2rem 0">
+			<div class="cell small-6 medium-4 large-10 work">
+				na robocie
+			</div>
+		</div>
+	</div>
+	<div class="grid-x gallery">
+		
+		<div class="cell medium-6">
+			<img src="images/222.jpg"><br>
+			<div class="description">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
+				facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
+				voluptatem ipsa ratione.
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/111.jpg"><br>
+			<div class="description">
+				Siaba daba
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/333.jpg"><br>
+			<div class="description">
+				yyyyyyyyyy
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/444.jpg"><br>
+			<div class="description">
+				xxxxxxxxxxx
+			</div>
+		</div>
+	</div>
+	<!-- /////////////////////////////////contact//////////////////// -->
+
 
 
 
