--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -112,7 +112,7 @@
 
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
-	<div id="na robocie"  class="grid-container">
+	<div id="ourwork"  class="grid-container">
 		<div class="grid-x grid-padding-x" style="padding:2rem 0">
 			<div class="cell small-6 medium-4 large-10 work">
 				na robocie
