--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -32,8 +32,8 @@
 
 	<section id="about-me">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x" style="padding:2rem 0">
-				
+			<div class="grid-x grid-padding-x text-center" style="padding:2rem 0">
+
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
 						Radzio.com<br>
@@ -45,11 +45,13 @@
 	</section>
 
 	<section id="about">
-		<div class="grid-container sentence">
-			<div class="grid-x grid-padding-x" style="height: 300px;">
-				<div class="cell small-6 medium-4 large-10 ">
-					<div class="h2">
-						co robimy
+		<div class="sentence">
+			<div class="grid-container">
+				<div class="grid-x grid-padding-x" style="height: 300px;">
+					<div class="cell small-6 medium-4 large-10 text-center ">
+						<div class="h2">
+							co robimy
+						</div>
 					</div>
 				</div>
 			</div>
@@ -72,12 +74,12 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<section id="contact" class="interested">
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x" style="padding:2rem 0">
-				
-				<div class="cell small-6 medium-4 large-10">
+
+				<div class="cell small-6 medium-4 large-10 text-center">
 					<div class="h1">
 						Radzio.com<br>
 						bądźmy w kontakcie
@@ -112,7 +114,7 @@
 
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
-	<div id="ourwork"  class="grid-container">
+	<div id="ourwork" class="grid-container">
 		<div class="grid-x grid-padding-x" style="padding:2rem 0">
 			<div class="cell small-6 medium-4 large-10 work">
 				na robocie
@@ -120,7 +122,7 @@
 		</div>
 	</div>
 	<div class="grid-x gallery">
-		
+
 		<div class="cell medium-6">
 			<img src="images/222.jpg"><br>
 			<div class="description">
