--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -119,7 +119,7 @@
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<div class="work">
 		<div id="ourwork" class="grid-container">
-			<div class="grid-x grid-padding-x align-middle text-center" >
+			<div class="grid-x grid-padding-x align-midle text-center" >
 				<div class="cell small-6 medium-4 large-10 " style="height: 300px;">
 					na robocie
 				</div>
